# bytecode-interp

./: .editorconfig  .gitattributes  .gitignore  Ast.fs  Cargo.toml  Compiler.fs  EcmaScript.fs  LICENSE  Program.fs  README.md  build.fsx  build.ninja  dune  generate-code.js  ninja.fsx  package.json  pnpm-lock.yaml  psyche.fsproj  psyche.ml  psyche.opam  psyche.sln
.github/workflows/: test.yml
Properties/: launchSettings.json
Psyche/: psyche.fsproj
archive/elf/: build.ninja
archive/ocaml/: .gitignore  README.md  psyche.opam
archive/ocaml/coq/: NaturalNumber.v  Unicode.v  dune
archive/ocaml/parsec/: parsec.ml  parsec.mli
archive/ocaml/test/: char_parser.ml  char_parser.mli  dune
archive/ocaml/unicode/: unicode.ml
archive/tiger/: Makefile  env.sml  main.sml  tiger.mlb
asm/: .gitignore  build.ninja  noop.s
compiler/: compiler.ml  dune
compiler_rs/src/: error.rs  lib.rs
coq/: ExtractionSetup.v  Logic.v
elf/: .gitignore  main.cc
interp/: .gitignore  Interp.vcxproj  Interp.vcxproj.filters  README.md  build.ninja  compiler.h  main.c  test.sh  test_with_cov.sh
interp/Compiler/: Cargo.toml  compiler.cpp  compiler.hpp  scanner.cpp  scanner.hpp
interp/Interp/: Interp.vcxproj  main.c
interp/UnitTest/: UnitTest.vcxproj  test.cpp
parsec/: dune  parsec.ml  parsec.mli
test/: char_parser.ml  dune  test.ml
tiger/: ast.sml  build.ninja  interp.sml  main.sml
unicode/: .gitignore  Extraction.v  dune  unicode.ml  unicode.mli  unicode.v
unit_test/: UnitTest.vcxproj  packages.config  test.cpp
ustring/: dune  ustring.ml  ustring.mli
vm/: .gitignore  README.md  VM.vcxproj  build.ninja  chunk.c  chunk.h  debug.c  debug.h  main.c  memory.c  memory.h  test.cc  test.sh  test_with_cov.sh  vm.c  vm.h
(+59 files in other folders)
