opam-version: "2.0"
maintainer: "0918nobita <nobita.0918@gmail.com>"
synopsis: "The Psyche programming language"
description: "
The Psyche programming language implemented in OCaml
"
authors: [
  "0918nobita"
]
homepage: "https://github.com/0918nobita/psyche"
dev-repo: "git+https://github.com/0918nobita/psyche.git"
bug-reports: "https://github.com/0918nobita/psyche/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
  "base"
  "uutf"
  "ounit2" {with-test}
  "qcheck" {with-test}
  "odoc" {with-doc}
  "bisect_ppx" {with-test & >= "2.5.0"}
]
