opam-version: "2.0"
version: "0.0.2"
synopsis: "The Psyche programming language"
description:
  "A compiler for the Psyche programming language implemented in OCaml and Coq"
maintainer: ["Kodai Matsumoto <nobita.0918@gmail.com>"]
authors: ["Kodai Matsumoto"]
license: "MIT"
homepage: "https://github.com/0918nobita/psyche"
bug-reports: "https://github.com/0918nobita/psyche/issues"
depends: [
  "dune" {>= "2.9"}
  "uutf"
  "coq" {dev}
  "coq-mathcomp-ssreflect" {dev}
  "ounit2" {with-test}
  "qcheck" {with-test}
  "bisect_ppx" {dev & with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/0918nobita/psyche.git"
